--- a/Data-Labeling-and-Categorization/Binning-Continuous-Variables.ipynb
+++ b/Data-Labeling-and-Categorization/Binning-Continuous-Variables.ipynb
@@ -1,13 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bc22b6c5",
+   "metadata": {},
+   "source": [
+    "This notebook aims to categorize a continuous variable into specific intervals."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "d9b421bf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-20T13:13:59.655154Z",
-     "start_time": "2025-01-20T13:13:59.349310Z"
+     "end_time": "2025-01-21T14:19:42.806724Z",
+     "start_time": "2025-01-21T14:19:42.352270Z"
     }
    },
    "outputs": [],
@@ -26,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "363b73d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-20T13:14:38.635833Z",
-     "start_time": "2025-01-20T13:14:38.632435Z"
+     "end_time": "2025-01-21T14:19:43.843502Z",
+     "start_time": "2025-01-21T14:19:43.840820Z"
     }
    },
    "outputs": [
@@ -60,12 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4188b1cd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-20T13:15:09.155488Z",
-     "start_time": "2025-01-20T13:15:09.145720Z"
+     "end_time": "2025-01-21T14:19:44.838853Z",
+     "start_time": "2025-01-21T14:19:44.825691Z"
     }
    },
    "outputs": [
@@ -96,15 +104,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.893647</td>\n",
+       "      <td>-0.773170</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.644130</td>\n",
+       "      <td>1.514150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-1.083868</td>\n",
+       "      <td>-0.121042</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -112,12 +120,12 @@
       ],
       "text/plain": [
        "     Floats\n",
-       "0  0.893647\n",
-       "1  0.644130\n",
-       "2 -1.083868"
+       "0 -0.773170\n",
+       "1  1.514150\n",
+       "2 -0.121042"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,17 +150,17 @@
     }
    },
    "source": [
-    "Let's look at descriptive statistics."
+    "Let's review descriptive statistics for the`Floats`, transposed for better readability."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "466bd43a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-20T13:39:27.667418Z",
-     "start_time": "2025-01-20T13:39:27.655684Z"
+     "end_time": "2025-01-21T14:19:46.242107Z",
+     "start_time": "2025-01-21T14:19:46.231542Z"
     }
    },
    "outputs": [
@@ -191,27 +199,27 @@
        "    <tr>\n",
        "      <th>Floats</th>\n",
        "      <td>1000.0</td>\n",
-       "      <td>0.020669</td>\n",
-       "      <td>0.99946</td>\n",
-       "      <td>-3.586532</td>\n",
-       "      <td>-0.663507</td>\n",
-       "      <td>-0.002046</td>\n",
-       "      <td>0.701838</td>\n",
-       "      <td>3.633645</td>\n",
+       "      <td>-0.0071</td>\n",
+       "      <td>1.014145</td>\n",
+       "      <td>-2.714057</td>\n",
+       "      <td>-0.667897</td>\n",
+       "      <td>-0.034432</td>\n",
+       "      <td>0.670126</td>\n",
+       "      <td>3.329568</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         count      mean      std       min       25%       50%       75%  \\\n",
-       "Floats  1000.0  0.020669  0.99946 -3.586532 -0.663507 -0.002046  0.701838   \n",
+       "         count    mean       std       min       25%       50%       75%  \\\n",
+       "Floats  1000.0 -0.0071  1.014145 -2.714057 -0.667897 -0.034432  0.670126   \n",
        "\n",
        "             max  \n",
-       "Floats  3.633645  "
+       "Floats  3.329568  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,27 +229,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e892641",
+   "metadata": {},
+   "source": [
+    "With the **custom_transform** function we'll categorize values from the `Floats` column into predefined ranges like `>3`, `>2`, and `<-1` using if-elif statements."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "a3d4a83c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-20T13:54:09.332955Z",
-     "start_time": "2025-01-20T13:54:09.329109Z"
+     "end_time": "2025-01-21T14:19:47.572904Z",
+     "start_time": "2025-01-21T14:19:47.568745Z"
     }
    },
    "outputs": [],
    "source": [
     "def custom_transform(row):\n",
-    "    if row['Floats'] > 3: return '>3'\n",
-    "    elif row['Floats'] > 2: return '>2'\n",
-    "    elif row['Floats'] > 1: return '>1'\n",
-    "    elif row['Floats'] > 0: return '>0'\n",
-    "    elif row['Floats'] < -3: return '<-3'\n",
-    "    elif row['Floats'] < -2: return '<-2'\n",
-    "    elif row['Floats'] < -1: return '<-1'\n",
-    "    elif row['Floats'] < 0: return '<0'\n",
-    "    else: return 'ZERO'"
+    "    if row['Floats'] > 3: \n",
+    "        return '>3'\n",
+    "    elif row['Floats'] > 2: \n",
+    "        return '>2'\n",
+    "    elif row['Floats'] > 1: \n",
+    "        return '>1'\n",
+    "    elif row['Floats'] > 0: \n",
+    "        return '>0'\n",
+    "    elif row['Floats'] < -3: \n",
+    "        return '<-3'\n",
+    "    elif row['Floats'] < -2: \n",
+    "        return '<-2'\n",
+    "    elif row['Floats'] < -1:\n",
+    "        return '<-1'\n",
+    "    elif row['Floats'] < 0: \n",
+    "        return '<0'\n",
+    "    else: \n",
+    "        return 'ZERO'"
    ]
   },
   {
@@ -249,17 +274,17 @@
    "id": "6720d788",
    "metadata": {},
    "source": [
-    "Apply the custom_transform function to each row"
+    "We'll apply the **custom_transform** function to each row of the `df` and create a new column called `Category` with the results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "1f98d7c7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-20T13:54:10.039550Z",
-     "start_time": "2025-01-20T13:54:10.018798Z"
+     "end_time": "2025-01-21T14:19:50.007207Z",
+     "start_time": "2025-01-21T14:19:49.989333Z"
     }
    },
    "outputs": [],
@@ -269,38 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "4c75ba52",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-20T13:54:46.670758Z",
-     "start_time": "2025-01-20T13:54:46.666536Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['>0', '<-1', '<0', '>1', '>2', '<-2', '>3', '<-3'], dtype=object)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.Category.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "97e6b32a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-20T13:57:28.466583Z",
-     "start_time": "2025-01-20T13:57:28.435195Z"
+     "end_time": "2025-01-21T14:19:53.922744Z",
+     "start_time": "2025-01-21T14:19:53.886088Z"
     }
    },
    "outputs": [
@@ -350,93 +349,82 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"8\" valign=\"top\">Floats</th>\n",
+       "      <th rowspan=\"7\" valign=\"top\">Floats</th>\n",
        "      <th>&lt;-1</th>\n",
-       "      <td>126.0</td>\n",
-       "      <td>-1.396362</td>\n",
-       "      <td>0.285769</td>\n",
-       "      <td>-1.992766</td>\n",
-       "      <td>-1.649230</td>\n",
-       "      <td>-1.322080</td>\n",
-       "      <td>-1.147028</td>\n",
-       "      <td>-1.002788</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>-1.393177</td>\n",
+       "      <td>0.251087</td>\n",
+       "      <td>-1.965988</td>\n",
+       "      <td>-1.572732</td>\n",
+       "      <td>-1.373747</td>\n",
+       "      <td>-1.187195</td>\n",
+       "      <td>-1.005093</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>&lt;-2</th>\n",
-       "      <td>21.0</td>\n",
-       "      <td>-2.250408</td>\n",
-       "      <td>0.204066</td>\n",
-       "      <td>-2.681007</td>\n",
-       "      <td>-2.378140</td>\n",
-       "      <td>-2.169285</td>\n",
-       "      <td>-2.064110</td>\n",
-       "      <td>-2.021492</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>&lt;-3</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-3.398177</td>\n",
-       "      <td>0.266373</td>\n",
-       "      <td>-3.586532</td>\n",
-       "      <td>-3.492354</td>\n",
-       "      <td>-3.398177</td>\n",
-       "      <td>-3.304000</td>\n",
-       "      <td>-3.209823</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>-2.273333</td>\n",
+       "      <td>0.208688</td>\n",
+       "      <td>-2.714057</td>\n",
+       "      <td>-2.353816</td>\n",
+       "      <td>-2.265000</td>\n",
+       "      <td>-2.100370</td>\n",
+       "      <td>-2.005605</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>&lt;0</th>\n",
-       "      <td>352.0</td>\n",
-       "      <td>-0.453565</td>\n",
-       "      <td>0.285500</td>\n",
-       "      <td>-0.999576</td>\n",
-       "      <td>-0.696570</td>\n",
-       "      <td>-0.430061</td>\n",
-       "      <td>-0.208010</td>\n",
-       "      <td>-0.000293</td>\n",
+       "      <td>341.0</td>\n",
+       "      <td>-0.463998</td>\n",
+       "      <td>0.270254</td>\n",
+       "      <td>-0.992686</td>\n",
+       "      <td>-0.667807</td>\n",
+       "      <td>-0.423468</td>\n",
+       "      <td>-0.248239</td>\n",
+       "      <td>-0.008600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>&gt;0</th>\n",
-       "      <td>325.0</td>\n",
-       "      <td>0.469536</td>\n",
-       "      <td>0.284942</td>\n",
-       "      <td>0.001684</td>\n",
-       "      <td>0.219103</td>\n",
-       "      <td>0.465097</td>\n",
-       "      <td>0.696487</td>\n",
-       "      <td>0.992475</td>\n",
+       "      <td>334.0</td>\n",
+       "      <td>0.474242</td>\n",
+       "      <td>0.279538</td>\n",
+       "      <td>0.004202</td>\n",
+       "      <td>0.237195</td>\n",
+       "      <td>0.475182</td>\n",
+       "      <td>0.696317</td>\n",
+       "      <td>0.997641</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>&gt;1</th>\n",
-       "      <td>157.0</td>\n",
-       "      <td>1.374814</td>\n",
-       "      <td>0.261476</td>\n",
-       "      <td>1.002326</td>\n",
-       "      <td>1.177605</td>\n",
-       "      <td>1.306742</td>\n",
-       "      <td>1.559829</td>\n",
-       "      <td>1.977521</td>\n",
+       "      <td>131.0</td>\n",
+       "      <td>1.350210</td>\n",
+       "      <td>0.268824</td>\n",
+       "      <td>1.001577</td>\n",
+       "      <td>1.146281</td>\n",
+       "      <td>1.284686</td>\n",
+       "      <td>1.499861</td>\n",
+       "      <td>1.991024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>&gt;2</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>2.390098</td>\n",
-       "      <td>0.272463</td>\n",
-       "      <td>2.034630</td>\n",
-       "      <td>2.199533</td>\n",
-       "      <td>2.290771</td>\n",
-       "      <td>2.608258</td>\n",
-       "      <td>2.940748</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>2.271703</td>\n",
+       "      <td>0.236164</td>\n",
+       "      <td>2.015028</td>\n",
+       "      <td>2.062529</td>\n",
+       "      <td>2.199505</td>\n",
+       "      <td>2.431310</td>\n",
+       "      <td>2.847408</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>&gt;3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.633645</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.633645</td>\n",
-       "      <td>3.633645</td>\n",
-       "      <td>3.633645</td>\n",
-       "      <td>3.633645</td>\n",
-       "      <td>3.633645</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.180913</td>\n",
+       "      <td>0.129236</td>\n",
+       "      <td>3.095261</td>\n",
+       "      <td>3.106585</td>\n",
+       "      <td>3.117910</td>\n",
+       "      <td>3.223739</td>\n",
+       "      <td>3.329568</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -445,28 +433,26 @@
       "text/plain": [
        "                 count      mean       std       min       25%       50%  \\\n",
        "       Category                                                            \n",
-       "Floats <-1       126.0 -1.396362  0.285769 -1.992766 -1.649230 -1.322080   \n",
-       "       <-2        21.0 -2.250408  0.204066 -2.681007 -2.378140 -2.169285   \n",
-       "       <-3         2.0 -3.398177  0.266373 -3.586532 -3.492354 -3.398177   \n",
-       "       <0        352.0 -0.453565  0.285500 -0.999576 -0.696570 -0.430061   \n",
-       "       >0        325.0  0.469536  0.284942  0.001684  0.219103  0.465097   \n",
-       "       >1        157.0  1.374814  0.261476  1.002326  1.177605  1.306742   \n",
-       "       >2         16.0  2.390098  0.272463  2.034630  2.199533  2.290771   \n",
-       "       >3          1.0  3.633645       NaN  3.633645  3.633645  3.633645   \n",
+       "Floats <-1       139.0 -1.393177  0.251087 -1.965988 -1.572732 -1.373747   \n",
+       "       <-2        26.0 -2.273333  0.208688 -2.714057 -2.353816 -2.265000   \n",
+       "       <0        341.0 -0.463998  0.270254 -0.992686 -0.667807 -0.423468   \n",
+       "       >0        334.0  0.474242  0.279538  0.004202  0.237195  0.475182   \n",
+       "       >1        131.0  1.350210  0.268824  1.001577  1.146281  1.284686   \n",
+       "       >2         26.0  2.271703  0.236164  2.015028  2.062529  2.199505   \n",
+       "       >3          3.0  3.180913  0.129236  3.095261  3.106585  3.117910   \n",
        "\n",
        "                      75%       max  \n",
        "       Category                      \n",
-       "Floats <-1      -1.147028 -1.002788  \n",
-       "       <-2      -2.064110 -2.021492  \n",
-       "       <-3      -3.304000 -3.209823  \n",
-       "       <0       -0.208010 -0.000293  \n",
-       "       >0        0.696487  0.992475  \n",
-       "       >1        1.559829  1.977521  \n",
-       "       >2        2.608258  2.940748  \n",
-       "       >3        3.633645  3.633645  "
+       "Floats <-1      -1.187195 -1.005093  \n",
+       "       <-2      -2.100370 -2.005605  \n",
+       "       <0       -0.248239 -0.008600  \n",
+       "       >0        0.696317  0.997641  \n",
+       "       >1        1.499861  1.991024  \n",
+       "       >2        2.431310  2.847408  \n",
+       "       >3        3.223739  3.329568  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
